<resources>
    <string name="app_name">Test</string>

    <string name="Profile_id">ProfileId_</string>
    <string name="student_name">Student Name</string>
    <string name="student_surname">Student Surname</string>
    <string name="student_id">Student Id</string>
    <string name="student_gpa">Student Gpa</string>
    <string name="cancel">cancel</string>
    <string name="save">Save</string>


</resources>